[package]
name = "Peer"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
hkdf = "0.12.4"
sha2 = "0.10.8"
zeroize = "1.8.1"
aes-gcm = "0.10.3"
igd-next = "0.15.1"
dialoguer = "0.11.0"
clearscreen = "3.0.0"
local-ip-address = "0.6.3"
fips203 = {version = "0.4.1", features=["ml-kem-1024", "default-rng"]}
fips204 = {version = "0.4.5", features=["ml-dsa-87", "default-rng"]}